Fix uneven loading component

--- a/src/css/loading.scss
+++ b/src/css/loading.scss
@@ -1,8 +1,8 @@
 .loading {
 	display: flex;
 	z-index: 50;
-	width: 30%;
-	height: 30%;
+	width: 30vmin;
+	height: 30vmin;
 	align-items: center; /* vertical */
     justify-content: center; /* horizontal */
 }
